# binteger

./: LICENSE  README.md  bint.py  binteger.py  make_docs.sh  pyproject.toml  run_tests.sh
bint/: __init__.py  bint.py
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
