[tool.poetry]
name = "binteger"
version = "0.15.1"
description = "Binary integer representation toolkit"
authors = ["Aleksei Udovenko <aleksei@affine.group>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
